--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
         </div>
       </section>
     <!--Banner end-->
-
     <!--About start-->
       <section id="about">
         <div class="container">
             <h1 class="text-center">About Me</h1>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="imgs/GANESH1.png" alt="passportPicture" class="card-img img-fluid">
+                    <img src="images/ganesh.jpg" alt="passportPicture" class="card-img img-fluid">
                 </div>
                 <div class="col-md-8 d-flex flex-column justify-content-center">
                     <p>I'm KAKARA GANESH.I'm currently persuying my B.tech in computer science engineering in Visakha institute of engineering and technology, In the year of 2024 it will be get's completed.I've a very good knowledge about front end development .I'm very intrested in learning new things such as web development , cloud computing E.t.c. I've done few certifications also which are shown below.</p>
